QACI-402 Standalone maven repository cache, several fixes for better stability
- local maven repository in maven-repo directory
- Dependency Downloader module separated to own module
- settings.xml used by all builds
- MaxPErmSize for JDK6 ant build (crashed when used with Zulu JDK6u119