@@ -41,10 +41,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>fish.payara.mojarra</groupId>
-    <artifactId>mojarra-2.2-dependencies</artifactId>
+    <artifactId>mojarra-2.2-root-build-aggregator</artifactId>
     <version>0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Mojarra - Dependency Downloader</name>
+    <name>Mojarra - Build Aggregator</name>
 
     <properties>
         <!-- must be version 1.9. -->
@@ -55,9 +55,21 @@
         <jdk6.home>/usr/lib/jvm/jdk1.6.0</jdk6.home>
         <!-- must be version 1.8 -->
         <jdk8.home>/usr/lib/jvm/jdk1.8.0</jdk8.home>
+        <settings.xml>${project.build.directory}/settings.xml</settings.xml>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+                <targetPath>${project.build.directory}/</targetPath>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -65,6 +77,7 @@
                 <version>3.0.0</version>
                 <configuration>
                     <environmentVariables>
+                        <ANT_OPTS>-Xms1g -Xmx2g -Xss768k</ANT_OPTS>
                         <MAVEN_OPTS>-Xms1g -Xmx2g -Xss768k</MAVEN_OPTS>
                         <MAVEN_SKIP_RC>true</MAVEN_SKIP_RC>
                         <M2_HOME>${mvn.home}</M2_HOME>
@@ -74,13 +87,14 @@
                 <executions>
                     <execution>
                         <id>collect-additional-dependencies</id>
-                        <phase>generate-resources</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
                         <configuration>
                             <executable>${mvn.home}/bin/mvn</executable>
-                            <commandlineArgs>-f ./pom-dependencies.xml dependency:go-offline clean install</commandlineArgs>
+                            <workingDirectory>${basedir}/mvn-dependencies</workingDirectory>
+                            <commandlineArgs>-s ${settings.xml} dependency:go-offline clean install</commandlineArgs>
                             <environmentVariables>
                                 <JAVA_HOME>${jdk8.home}</JAVA_HOME>
                             </environmentVariables>
@@ -88,7 +102,7 @@
                     </execution>
                     <execution>
                         <id>collect-jsf-tools-dependencies</id>
-                        <phase>generate-resources</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
@@ -96,7 +110,7 @@
                             <workingDirectory>${basedir}/jsf-tools</workingDirectory>
                             <executable>${mvn.home}/bin/mvn</executable>
                             <!-- does not download maven transitives -->
-                            <commandlineArgs>dependency:go-offline</commandlineArgs>
+                            <commandlineArgs>-s ${settings.xml} dependency:go-offline</commandlineArgs>
                             <environmentVariables>
                                 <JAVA_HOME>${jdk8.home}</JAVA_HOME>
                             </environmentVariables>
@@ -104,14 +118,14 @@
                     </execution>
                     <execution>
                         <id>build-jsf-tools</id>
-                        <phase>generate-resources</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
                         <configuration>
                             <workingDirectory>${basedir}/jsf-tools</workingDirectory>
                             <executable>${mvn.home}/bin/mvn</executable>
-                            <commandlineArgs>clean install</commandlineArgs>
+                            <commandlineArgs>-s ${settings.xml} clean install</commandlineArgs>
                             <environmentVariables>
                                 <JAVA_HOME>${jdk6.home}</JAVA_HOME>
                             </environmentVariables>
@@ -119,35 +133,37 @@
                     </execution>
                     <execution>
                         <id>execute-ant-with-jdk8-to-collect-dependencies</id>
-                        <phase>generate-resources</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
                         <configuration>
                             <executable>${ant.home}/bin/ant</executable>
                             <commandlineArgs>
-                            main -Dmaven.m2.settings=${basedir}/settings.xml
+                            main -Dmaven.m2.settings=${settings.xml}
                             -Djsf.build.home=${basedir} -Dcontainer.name=glassfish
                             </commandlineArgs>
                             <environmentVariables>
+                                <ANT_OPTS>-Xms1g -Xmx2g -Xss768k</ANT_OPTS>
                                 <JAVA_HOME>${jdk8.home}</JAVA_HOME>
                             </environmentVariables>
                         </configuration>
                     </execution>
                     <execution>
                         <id>execute-ant-with-jdk6</id>
-                        <phase>generate-resources</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
                         <configuration>
                             <executable>${ant.home}/bin/ant</executable>
                             <commandlineArgs>
-                            clean main -Dmaven.m2.settings=${basedir}/settings.xml
+                            clean main -Dmaven.m2.settings=${settings.xml}
                             -Djsf.build.home=${basedir} -Dcontainer.name=glassfish
                             </commandlineArgs>
                             <environmentVariables>
                                 <JAVA_HOME>${jdk6.home}</JAVA_HOME>
+                                <ANT_OPTS>-Xms1g -Xmx2g -Xss768k -XX:MaxPermSize=512m</ANT_OPTS>
                                 <MAVEN_OPTS>-Xms1g -Xmx2g -Xss768k -XX:MaxPermSize=1g</MAVEN_OPTS>
                             </environmentVariables>
                         </configuration>
